--- a/xtreme-octane/package.json
+++ b/xtreme-octane/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.9",
+    "recharts": "^2.7.2",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
