--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.bin
 
 # Dependency folders
+/obj/
 /bin/
 
 # testing
@@ -17,3 +18,13 @@
 # production
 /build
 
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
