--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+XtremeOctaneApi/.vs/ProjectEvaluation/xtremeoctaneapi.metadata.v7.bin
+XtremeOctaneApi/.vs/ProjectEvaluation/projects.v7.bin
+XtremeOctaneApi/.vs/XtremeOctaneApi/v17/.futdcache.v2
