--- a/xtreme-octane/package.json
+++ b/xtreme-octane/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.9",
     "recharts": "^2.7.2",
