--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,15 @@ yarn-error.log*
 XtremeOctaneApi/.vs/ProjectEvaluation/xtremeoctaneapi.metadata.v7.bin
 XtremeOctaneApi/.vs/ProjectEvaluation/projects.v7.bin
 XtremeOctaneApi/.vs/XtremeOctaneApi/v17/.futdcache.v2
+XtremeOctaneApi/bin/Debug/net7.0/XtremeOctaneApi.pdb
+XtremeOctaneApi/obj/project.assets.json
+XtremeOctaneApi/obj/XtremeOctaneApi.csproj.nuget.dgspec.json
+XtremeOctaneApi/obj/XtremeOctaneApi.csproj.nuget.g.props
+XtremeOctaneApi/obj/Debug/net7.0/apphost.exe
+XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.assets.cache
+XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.dll
+XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.pdb
+XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.GeneratedMSBuildEditorConfig.editorconfig
+XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.dll
+XtremeOctaneApi/.vs/XtremeOctaneApi/DesignTimeBuild/.dtbcache.v2
+XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.assets.cache
