--- a/xtreme-octane/package.json
+++ b/xtreme-octane/package.json
@@ -20,6 +20,7 @@
     "reactstrap": "^9.1.9",
     "recharts": "^2.7.2",
     "sass": "^1.62.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
