--- a/xtreme-octane/package.json
+++ b/xtreme-octane/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "recharts": "^2.7.2",
     "sass": "^1.62.1",
     "styled-components": "^5.3.3",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
