--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.GeneratedMSBuildEditorConfig.ed
 XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.dll
 XtremeOctaneApi/.vs/XtremeOctaneApi/DesignTimeBuild/.dtbcache.v2
 XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.assets.cache
+xtreme-octane/.idea
+XtremeOctaneApi/.vs/ProjectEvaluation
+XtremeOctaneApi/.vs/XtremeOctaneApi/v17
