event vote service

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ XtremeOctaneApi/obj/Debug/net7.0/XtremeOctaneApi.assets.cache
 xtreme-octane/.idea
 XtremeOctaneApi/.vs/ProjectEvaluation
 XtremeOctaneApi/.vs/XtremeOctaneApi/v17
+XtremeOctaneApi/.idea
+XtremeOctaneApi/obj/Debug/net7.0
