styling (in progress)

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ XtremeOctaneApi/.vs/ProjectEvaluation
 XtremeOctaneApi/.vs/XtremeOctaneApi/v17
 XtremeOctaneApi/.idea
 XtremeOctaneApi/obj/Debug/net7.0
+XtremeOctaneApi/obj
