--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ XtremeOctaneApi/.vs/XtremeOctaneApi/v17
 XtremeOctaneApi/.idea
 XtremeOctaneApi/obj/Debug/net7.0
 XtremeOctaneApi/obj
+XtremeOctaneApi/bin/Debug
