--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-	"devDependencies": {
-		"husky": "^9.0.11"
-	},
-	"scripts": {
-		"prepare": "husky install",
-		"lint": "eslint .",
-		"lint:fix": "eslint --fix."
-	},
-	"dependencies": {
-		"eslint": "^8.57.0",
-		"prettier": "^3.2.5"
-	}
+  "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "husky": "^9.0.11"
+  },
+  "scripts": {
+    "prepare": "husky install",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix --ext .js,.jsx ."
+  },
+  "dependencies": {
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  }
 }
