--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
-    "husky": "^9.0.11"
-  },
-  "scripts": {
-    "prepare": "husky install",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix --ext .js,.jsx .",
-    "lint:check": "eslint . --ext .js,.jsx --quiet"
+    "@eslint/js": "^9.19.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript-eslint": "^8.22.0"
   },
   "dependencies": {
-    "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5"
   },
