feat: updated angular ui

--- a/xo-web/package.json
+++ b/xo-web/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run generate:api && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate:api": "curl --insecure https://localhost:7033/swagger/v1/swagger.json > swagger.json && openapi-generator-cli generate -i swagger.json -g typescript-angular -o src/generated/api --skip-validate-spec"
   },
   "private": true,
   "dependencies": {
